<resources>
    <string name="app_name">MyPokemonCollection</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="empty"></string>
    <string name="unknown">\?\?\?</string>

<!--    strings for login and register fragments-->
    <string name="email_descriptor">E-mail:</string>
    <string name="email_hint">E-mail…</string>
    <string name="password_descriptor">Password:</string>
    <string name="password_hint">Password…</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="click_here_to_register"><u>Click here to register!</u></string>

<!--    strings for collection fragment-->
    <string name="my_pokemon_collection">My pokemon collection</string>
    <string name="add_new_pokemon">Add new pokemon</string>
    <string name="public_collection">Public collection</string>
    <string name="create_a_new_pokemon">Create a new pokemon</string>
    <string name="complete_data">Complete data</string>
    <string name="scan_a_qr_code">Scan a QR code</string>

    <!--    filter-->
    <string name="filter_collection">Filter collection</string>
    <string name="name_pattern">Name pattern:</string>
    <string name="name_pattern_hint">Name pattern…</string>
    <string name="species">Species:</string>
    <string name="species_hint">Species…</string>
    <string name="type_1">Type 1:</string>
    <string name="type_1_hint">Type 1…</string>
    <string name="type_2">Type 2:</string>
    <string name="type_2_hint">Type 2…</string>
    <string name="apply">Apply filters</string>

<!--    strings for details fragment-->
    <string name="pokemon_details">Pokemon details</string>
    <string name="ability">Ability</string>
    <string name="stats">Stats</string>
    <string name="stat">Stat</string>
    <string name="hp">HP:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="special_attack">Sp. Atk:</string>
    <string name="special_defense">Sp. Def:</string>
    <string name="speed">Speed:</string>

    <string name="value">Value</string>
    <string name="base">Base</string>
    <string name="ivs">IVs</string>
    <string name="evs">EVs</string>
    <string name="moves">Moves</string>
    <string name="edit_pokemon">Edit</string>
    <string name="qr_code">QR code</string>
    <string name="upload">Upload</string>
    <string name="pokemon_uploaded">Pokemon uploaded!</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="pokemon_downloaded">Pokemon downloaded!</string>
    <string name="do_you_really_want_to_delete_this_pokemon">Do you really want to delete this pokemon?</string>
    <string name="do_you_really_want_to_upload_this_pokemon">Do you really want to upload this pokemon?</string>
    <string name="do_you_really_want_to_download_this_pokemon">Do you really want to download this pokemon?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="add_pokemon">Add pokemon</string>
    <string name="choose_species">Choose species</string>
    <string name="choose_ability">Choose ability</string>
    <string name="choose_stats_related">Choose stats related</string>
    <string name="choose_moves">Choose moves</string>
    <string name="change_species">Change species</string>
    <string name="change_ability">Change ability</string>
    <string name="change_stats_related">Change stats related</string>
    <string name="change_moves">Change moves</string>
    <string name="level">Level:</string>
    <string name="nature">Nature:</string>
    <string name="total_evs_must_be__510">Total EVs must be &lt;= 510!</string>
    <string name="ok">OK</string>
    <string name="search">Search…</string>

    <string name="move">MOVE</string>
    <string name="pokemonType">TYPE</string>
    <string name="category">CATEGORY</string>
    <string name="power">POWER</string>
    <string name="accuracy">ACCURACY</string>
    <string name="pp">PP</string>
    <string name="change">Chg</string>
    <string name="del">Del</string>
    <string name="add_move">Add move</string>
    <string name="finalize">Finalize</string>
    <string name="give_your_setup_a_name">Give your setup a name:</string>
    <string name="nickname">Nickname</string>

    <string name="cat">CAT</string>
    <string name="pow">POW</string>
    <string name="acc">ACC</string>

    <string name="scan_qr_code">Scan QR Code</string>

    <string name="todo">TODO</string>
    <string name="final_stats">Final stats</string>

<!--    messages-->
    <string name="please_input_your_email">Please input your e-mail!</string>
    <string name="please_input_your_password">Please input your password!</string>
    <string name="account_created">Account created!</string>
    <string name="register_failed">Register failed!</string>
    <string name="wrong_credentials">Wrong credentials!</string>
    <string name="server_timeout">Server timeout!</string>
    <string name="error_selecting_pokemon">Error selecting pokemon!</string>
    <string name="move_already_added">Move already added!</string>
    <string name="please_input_a_name">Please input a name!</string>
    <string name="inserting_pokemon_failed">Inserting pokemon failed!</string>
    <string name="updating_pokemon_failed">Updating pokemon failed!</string>
    <string name="deleting_pokemon_failed">Deleting pokemon failed!</string>
    <string name="scan_successful">Scan successful!</string>
    <string name="scan_canceled">Scan canceled!</string>
    <string name="scan_a_pokemon_qr_code">Scan a pokemon QR code</string>
</resources>