<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login">

    <fragment
        android:id="@+id/login"
        android:name="app.ui.fragments.Login"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/register" />
        <action
            android:id="@+id/action_login_to_collection"
            app:destination="@id/collection" />
    </fragment>
    <fragment
        android:id="@+id/register"
        android:name="app.ui.fragments.Register"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/login" />
    </fragment>
    <fragment
        android:id="@+id/collection"
        android:name="app.ui.fragments.PokemonCollection"
        android:label="@string/my_pokemon_collection"
        tools:layout="@layout/fragment_collection">
        <action
            android:id="@+id/action_collection_to_details"
            app:destination="@id/details" />
        <action
            android:id="@+id/action_collection_to_add"
            app:destination="@id/add" />
        <action
            android:id="@+id/action_collection_to_login"
            app:destination="@id/login" />
        <action
            android:id="@+id/action_collection_to_publicCollection"
            app:destination="@id/publicCollection" />
    </fragment>
    <fragment
        android:id="@+id/details"
        android:name="app.ui.fragments.PokemonDetails"
        android:label="@string/pokemon_details">
        <action
            android:id="@+id/action_details_to_collection"
            app:destination="@id/collection" />
        <action
            android:id="@+id/action_details_to_add"
            app:destination="@id/add" />
        <action
            android:id="@+id/action_details_to_login"
            app:destination="@id/login" />
    </fragment>
    <fragment
        android:id="@+id/add"
        android:name="app.ui.fragments.AddPokemon"
        android:label="@string/add_pokemon" >
        <action
            android:id="@+id/action_add_to_collection"
            app:destination="@id/collection" />
        <action
            android:id="@+id/action_add_to_login"
            app:destination="@id/login" />
    </fragment>
    <fragment
        android:id="@+id/publicCollection"
        android:name="app.ui.fragments.PublicPokemonCollection"
        android:label="@string/public_collection">
        <action
            android:id="@+id/action_publicCollection_to_collection"
            app:destination="@id/collection" />
        <action
            android:id="@+id/action_publicCollection_to_login"
            app:destination="@id/login" />
        <action
            android:id="@+id/action_publicCollection_to_details"
            app:destination="@id/details" />
    </fragment>
</navigation>